	by not using the theme name in the title of the function
	This will allow modules to come with supporting template functions, as well as overriding them
		If the theme fully supports that module
	As a result:
		theme_plain_ampache has be placed back in to the ampache module as theme_ampache, no template parameter is necissary

2010-05-15
Worked out some more advanced forms functionality in the admin_balancer module
Reorganized dependency() function in core to allow the dependency functions to always be called
	other dependencies are used to disprove all the dependencies are satisfied first
	And if everything is satisfied but the module is still disabled, then it will finally return false

2010-05-14
Modules can now use the 'depends on' field set to their own name to call a function to determine dependencies
	search and user use this
Archive handler combined with module
Module admin template now displays dependencies
Modules are disabled when the dependencies are not met

2010-05-12
Made lots of changes regarding the handlers
	Handlers register themselves just like any other module
	All that is required different from modules is the database field in the config
Handlers can now changes what database they are using by specifying a database in the $request['cat'] and passing it to the get_files() function
	The 3rd parameter should be set to 'files' to use default database get functionality
fs_ handlers now merged with the database handlers and some have been consolidated back in to modules
If dependencies fail on a module, it is disabled
Template module now uses always_output field to always output template information for use in templates
All setup_ functions have been abstracted from the modules and handlers and called automatically
Getting closer to a more usable API

2010-05-05
Created dependency_ functions for checking system requirements
Created status_ functions for each module to submit information to the status